Quality scorecard — 2026-02-24
98/104 (94%, Grade A). Full marks on API Quality and Test Quality.
Single blocking issue: no CI/CD pipeline (INF-06).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>